add psutil to get # cores on current machine

--- a/environment.yml
+++ b/environment.yml
@@ -22,6 +22,7 @@ dependencies:
     - ipywidgets
     - blackcellmagic
     - networkx[default]
+    - psutil
         #   - anyio=3.3.4
         #   - appnope=0.1.2
         #   - argon2-cffi=21.1.0
